remove custom documentation scripts, used bearer
